make footer sticky in all pages

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,13 @@
 
 body {
   background-color: #222222;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 nav ul a,
