fix navbar dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ footer.page-footer {
   background: orange;
 }
 
-.dropdown-content {
+#work-dropdown {
   top: 64px !important;
+}
+
+#work-dropdown-mobile {
+  position: relative !important;
+  top: 0px !important;
 }
