update hamburger menu color

--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,7 @@ footer.page-footer {
 .dropdown-content li > a, .dropdown-content li > span {
   color: orange;
 }
+
+.button-collapse {
+  color: black;
+}
