--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,16 @@ nav .brand-logo {
   color: #444;
 }
 
+nav .brand-logo {
+  font-size: 1.5rem !important;
+}
+
 p {
   line-height: 2rem;
+}
+
+h5 {
+  font-size: 1.4rem !important;
 }
 
 .button-collapse {
